--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "commander": "^9.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
